--- a/index.html
+++ b/index.html
@@ -657,6 +657,37 @@ button:hover,
   box-shadow: 0 8px 22px rgba(250, 204, 21, 0.25);
   opacity: 0.95;
 }
+    .partners-strip-logos {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+
+.partners-track {
+  display: flex;
+  width: max-content;
+  animation: scroll 25s linear infinite;
+}
+
+.partner-logo {
+  flex: 0 0 auto;
+  padding: 0 20px;
+}
+
+.partner-logo img {
+  height: 45px;
+  width: auto;
+}
+
+@keyframes scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
+
   </style>
 </head>
 <body>
@@ -802,25 +833,41 @@ button:hover,
             </div>
           </div>
         </div>
-        <div class="partners-strip partners-strip-logos">
-    <div class="partners-track">
-      <!-- 1. TUR -->
-      <div class="partner-logo"><img src="logos/pragmaticplay.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/amusnet.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/egtd.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/hacksawgaming.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/netent.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/fugaso.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/nolimit.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/novomatic.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/smartsoftgaming.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/playson.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/yggdrasil.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/redtiger.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/booominggames.png" alt=""></div>
-      <div class="partner-logo"><img src="logos/betsoft.png" alt=""></div>
-    </div>
+  <div class="partners-strip partners-strip-logos">
+  <div class="partners-track">
+    <!-- 1. TUR -->
+    <div class="partner-logo"><img src="logos/pragmaticplay.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/amusnet.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/egtd.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/hacksawgaming.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/netent.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/fugaso.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/nolimit.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/novomatic.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/smartsoftgaming.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/playson.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/yggdrasil.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/redtiger.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/booominggames.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/betsoft.png" alt=""></div>
+
+    <!-- 2. TUR → KESİNTİSİZ OLSUN DİYE AYNI LİSTEYİ TEKRAR EKLİYORUZ -->
+    <div class="partner-logo"><img src="logos/pragmaticplay.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/amusnet.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/egtd.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/hacksawgaming.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/netent.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/fugaso.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/nolimit.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/novomatic.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/smartsoftgaming.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/playson.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/yggdrasil.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/redtiger.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/booominggames.png" alt=""></div>
+    <div class="partner-logo"><img src="logos/betsoft.png" alt=""></div>
   </div>
+</div>
         </div>
       </section>
     </aside>
