--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@ button:hover,
     <img src="https://telegram.org/img/t_logo.svg" alt="Telegram" class="footer-tg-img" />
   </a>
   <div class="footer-note">
-    Açık Medya kuruluşudur.
+    iletisim@acikmedya.com
   </div>
 </footer>
   <!-- Sıcak Alarmı: push -->
