--- a/index.html
+++ b/index.html
@@ -953,35 +953,42 @@ button:hover,
     coldBody.innerHTML = "";
 
     // HOT TABLOSU
-    orderHot.forEach((id, index) => {
-      const g = gameById[id];
-      if (!g) return;
-      const tr = document.createElement("tr");
-      const tInfo = trendInfo(g.trendDirection || "flat");
-      const delta = g.deltaRtp || 0;
-      const deltaSign = delta >= 0 ? "▲" : "▼";
-      const deltaClass = delta >= 0 ? "rtp-change" : "rtp-change down";
-      const deltaText = Math.abs(delta).toFixed(2);
+    // HOT TABLOSU
+orderHot.forEach((id, index) => {
+  const g = gameById[id];
+  if (!g) return;
+  const tr = document.createElement("tr");
+  const tInfo = trendInfo(g.trendDirection || "flat");
+  const delta = g.deltaRtp || 0;
+  const deltaSign = delta >= 0 ? "▲" : "▼";
+  const deltaClass = delta >= 0 ? "rtp-change" : "rtp-change down";
+  const deltaText = Math.abs(delta).toFixed(2);
 
-      tr.innerHTML = `
-        <td class="col-rank">${index + 1}</td>
-        <td class="col-name">
-          ${g.name}<br />
-          <span class="badge-hot">Sıcak</span>
-        </td>
-        <td class="col-provider">${g.provider}</td>
-        <td><span class="rtp-pill">${g.rtp.toFixed(2)}%</span></td>
-        <td><span class="${deltaClass}">${deltaSign} ${deltaText}</span></td>
-        <td><span class="heat-pill">${g.heat}</span></td>
-        <td class="col-maxwin">
-          ${g.maxWinMultiplier}x<br />
-          <span class="maxwin-time">${minutesToText(g.lastMaxWinMinutes)}</span>
-        </td>
-        <td><span class="trend-pill ${tInfo.className}">${tInfo.label}</span></td>
-        <td><button class="btn btn-primary small" data-play-id="${g.id}">Oyna</button></td>
-      `;
-      hotBody.appendChild(tr);
-    });
+  // 🔥 Son max win süresini 3–59 dk aralığına zorla
+  let lastMaxMinutes = g.lastMaxWinMinutes;
+  if (lastMaxMinutes < 3) lastMaxMinutes = 3;
+  if (lastMaxMinutes > 59) lastMaxMinutes = 59;
+
+  tr.innerHTML = `
+    <td class="col-rank">${index + 1}</td>
+    <td class="col-name">
+      ${g.name}<br />
+      <span class="badge-hot">Sıcak</span>
+    </td>
+    <td class="col-provider">${g.provider}</td>
+    <td><span class="rtp-pill">${g.rtp.toFixed(2)}%</span></td>
+    <td><span class="${deltaClass}">${deltaSign} ${deltaText}</span></td>
+    <td><span class="heat-pill">${g.heat}</span></td>
+    <td class="col-maxwin">
+      ${g.maxWinMultiplier}x<br />
+      <span class="maxwin-time">${minutesToText(lastMaxMinutes)}</span>
+    </td>
+    <td><span class="trend-pill ${tInfo.className}">${tInfo.label}</span></td>
+    <td><button class="btn btn-primary small" data-play-id="${g.id}">Oyna</button></td>
+  `;
+  hotBody.appendChild(tr);
+});
+
 
     // COLD TABLOSU
     orderCold.forEach((id, index) => {
