--- a/index.html
+++ b/index.html
@@ -943,6 +943,14 @@ button:hover,
       console.error("API hata:", err);
     }
   }
+function hashString(str) {
+  let h = 0;
+  for (let i = 0; i < str.length; i++) {
+    h = ((h << 5) - h) + str.charCodeAt(i);
+    h |= 0;
+  }
+  return Math.abs(h);
+}
 
   function renderTables() {
     const hotBody = document.getElementById("hot-body");
@@ -951,8 +959,6 @@ button:hover,
 
     hotBody.innerHTML = "";
     coldBody.innerHTML = "";
-
-    // HOT TABLOSU
     // HOT TABLOSU
 orderHot.forEach((id, index) => {
   const g = gameById[id];
@@ -964,10 +970,19 @@ orderHot.forEach((id, index) => {
   const deltaClass = delta >= 0 ? "rtp-change" : "rtp-change down";
   const deltaText = Math.abs(delta).toFixed(2);
 
-  // 🔥 Son max win süresini 3–59 dk aralığına zorla
-  let lastMaxMinutes = g.lastMaxWinMinutes;
-  if (lastMaxMinutes < 3) lastMaxMinutes = 3;
-  if (lastMaxMinutes > 59) lastMaxMinutes = 59;
+  // 🔥 Son max win süresini 3–59 dk aralığında, oyuna özgü sabit bir değere map et
+  const key = g.id || g.name || `idx-${index}`;
+  const h = hashString(String(key));
+  const randomOffset = h % 57;      // 0–56
+  let lastMaxMinutes;
+
+  // Eğer backend'ten gelen değer zaten 3–59 arasındaysa onu kullan,
+  // değilse hash'ten türetilen değeri kullan.
+  if (g.lastMaxWinMinutes >= 3 && g.lastMaxWinMinutes <= 59) {
+    lastMaxMinutes = g.lastMaxWinMinutes;
+  } else {
+    lastMaxMinutes = 3 + randomOffset; // 3–59 aralığı
+  }
 
   tr.innerHTML = `
     <td class="col-rank">${index + 1}</td>
@@ -988,6 +1003,7 @@ orderHot.forEach((id, index) => {
   `;
   hotBody.appendChild(tr);
 });
+
 
 
     // COLD TABLOSU
