--- a/index.html
+++ b/index.html
@@ -695,22 +695,22 @@ button:hover,
   <div class="ad-strip-wrapper">
     <a href="#" class="ad-banner">
       <div>
-        <span class="ad-site">Betosfer</span>
-        <span class="ad-text">· Her yatırıma özel freespin fırsatları</span>
+        <span class="ad-site">Stake</span>
+        <span class="ad-text">· Sınırsız kazanç, sınırsız çekim</span>
       </div>
-      <span class="ad-cta">Detay</span>
+      <span class="ad-cta">Üye Ol</span>
     </a>
     <a href="#" class="ad-banner">
       <div>
-        <span class="ad-site">Betpas</span>
-        <span class="ad-text">· Süper oranlar, süper kombine bonuslar</span>
+        <span class="ad-site">Joybet</span>
+        <span class="ad-text">· 30 dakikada ödeme garantisi</span>
       </div>
-      <span class="ad-cta">Hemen İncele</span>
+      <span class="ad-cta">Üye Ol</span>
     </a>
     <a href="#" class="ad-banner">
       <div>
-        <span class="ad-site">Old Casino</span>
-        <span class="ad-text">· Yüksek RTP’li slotlarda özel kampanyalar</span>
+        <span class="ad-site">Benebet</span>
+        <span class="ad-text">· Hızlı ödeme, yüksek bonus</span>
       </div>
       <span class="ad-cta">Kampanyalar</span>
     </a>
@@ -1094,9 +1094,9 @@ orderHot.forEach((id, index) => {
   }
 
   const adLinks = [
-    "https://google.com",
-    "https://google.com",
-    "https://google.com"
+    "https://stake.com/?c=aJdZwGlD",
+    "https://www.joybet669.pro/affiliates/?btag=559047",
+    "https://benebet280.com/register/46233"
   ];
 
   function bindAdBanners() {
