--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ button:hover,
         <span class="ad-site">Benebet</span>
         <span class="ad-text">· Hızlı ödeme, yüksek bonus</span>
       </div>
-      <span class="ad-cta">Kampanyalar</span>
+      <span class="ad-cta">Üye Ol</span>
     </a>
   </div>
   <main class="page">
@@ -805,19 +805,19 @@ button:hover,
         </div>
         <div class="freespin-list">
           <div class="freespin-row">
-            <span>Betosfer · <span class="game">Sugar Rush 50FS</span></span>
+            <span>Stake · <span class="game">Komisyon İadesi</span></span>
             <button class="btn btn-primary small">Hemen Al</button>
           </div>
           <div class="freespin-row">
-            <span>Betpas · <span class="game">Gates 25FS (Çevrimsiz)</span></span>
+            <span>Joybet · <span class="game">Gates 250 FS (Yatırım Şartsız)</span></span>
             <button class="btn btn-primary small">Hemen Al</button>
           </div>
           <div class="freespin-row">
-            <span>Old Casino · <span class="game">Wanted 20FS</span></span>
+            <span>Benebet · <span class="game">Yeni Üyelere 250 FS</span></span>
             <button class="btn btn-primary small">Hemen Al</button>
           </div>
           <div class="freespin-row">
-            <span>Restbet · <span class="game">Sweet Bonanza 40FS</span></span>
+            <span>Orisbet · <span class="game">Her Gün %100 Freespin</span></span>
             <button class="btn btn-primary small">Hemen Al</button>
           </div>
         </div>
