--- a/index.html
+++ b/index.html
@@ -804,23 +804,43 @@ button:hover,
      
         </div>
         <div class="freespin-list">
-          <div class="freespin-row">
-            <span>Stake · <span class="game">Komisyon İadesi</span></span>
-            <button class="btn btn-primary small">Hemen Al</button>
-          </div>
-          <div class="freespin-row">
-            <span>Joybet · <span class="game">Gates 250 FS (Yatırım Şartsız)</span></span>
-            <button class="btn btn-primary small">Hemen Al</button>
-          </div>
-          <div class="freespin-row">
-            <span>Benebet · <span class="game">Yeni Üyelere 250 FS</span></span>
-            <button class="btn btn-primary small">Hemen Al</button>
-          </div>
-          <div class="freespin-row">
-            <span>Orisbet · <span class="game">Her Gün %100 Freespin</span></span>
-            <button class="btn btn-primary small">Hemen Al</button>
-          </div>
-        </div>
+  <div class="freespin-row">
+    <span>Stake · <span class="game">Günlük Komisyon İadesi</span></span>
+    <button
+      class="btn btn-primary small fs-btn"
+      data-url="stake.com/?c=aJdZwGlD"
+    >
+      Hemen Al
+    </button>
+  </div>
+  <div class="freespin-row">
+    <span>Joybet· <span class="game">Gates 250 FS (Yatırım Şartsız)</span></span>
+    <button
+      class="btn btn-primary small fs-btn"
+      data-url="https://www.joybet669.pro/affiliates/?btag=559047"
+    >
+      Hemen Al
+    </button>
+  </div>
+  <div class="freespin-row">
+    <span>Benebet · <span class="game">Yeni Üyelere 250 FS</span></span>
+    <button
+      class="btn btn-primary small fs-btn"
+      data-url="https://benebet280.com/register/46233"
+    >
+      Hemen Al
+    </button>
+  </div>
+  <div class="freespin-row">
+    <span>Orisbet · <span class="game">Her Gün %100 Freespin</span></span>
+    <button
+      class="btn btn-primary small fs-btn"
+      data-url="https://cutt.ly/orissgirris"
+    >
+      Hemen Al
+    </button>
+  </div>
+</div>
       </section>
       <section class="card sidebar-card">
         <div class="card-header">
