--- a/index.html
+++ b/index.html
@@ -1127,6 +1127,16 @@ orderHot.forEach((id, index) => {
       });
     });
   }
+function bindFreespinButtons() {
+  document.querySelectorAll(".fs-btn").forEach((btn) => {
+    const url = btn.dataset.url;
+    if (!url) return;
+
+    btn.addEventListener("click", () => {
+      window.open(url, "_blank");
+    });
+  });
+}
 
   window.addEventListener("load", () => {
     renderWinners();
