--- a/index.html
+++ b/index.html
@@ -1137,6 +1137,16 @@ function bindFreespinButtons() {
     });
   });
 }
+function bindFreespinButtons() {
+  document.querySelectorAll(".fs-btn").forEach((btn) => {
+    const url = btn.dataset.url;
+    if (!url) return;
+
+    btn.addEventListener("click", () => {
+      window.open(url, "_blank");
+    });
+  });
+}
 
   window.addEventListener("load", () => {
     renderWinners();
