--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@ button:hover,
     <span>Stake · <span class="game">Günlük Komisyon İadesi</span></span>
     <button
       class="btn btn-primary small fs-btn"
-      data-url="stake.com/?c=aJdZwGlD"
+      data-url="https://stake.com/?c=aJdZwGlD"
     >
       Hemen Al
     </button>
