--- a/index.html
+++ b/index.html
@@ -1086,11 +1086,11 @@ orderHot.forEach((id, index) => {
 
   function renderWinners() {
     const winners = [
-      { site: "Betosfer",   user: "***q9", amount: "5.800.000 TL", url: "https://google.com" },
-      { site: "Betpas",     user: "***ak", amount: "4.120.000 TL", url: "https://google.com" },
-      { site: "Old Casino", user: "***c7", amount: "3.575.000 TL", url: "https://google.com" },
-      { site: "Betpas",     user: "***ve", amount: "2.584.496 TL", url: "https://google.com" },
-      { site: "Bethand",    user: "***k9", amount: "1.058.168 TL", url: "https://google.com" }
+      { site: "Stake",   user: "***q9", amount: "15.800.000 TL", url: "https://stake.com/?c=aJdZwGlD" },
+      { site: "Joybet",     user: "***ak", amount: "4.120.000 TL", url: "https://www.joybet669.pro/affiliates/?btag=559047" },
+      { site: "Benebet", user: "***c7", amount: "3.575.000 TL", url: "https://benebet280.com/register/46233" },
+      { site: "Benebet",     user: "***ve", amount: "2.584.496 TL", url: "https://benebet280.com/register/46233" },
+      { site: "Orisbet",    user: "***k9", amount: "1.058.168 TL", url: "https://cutt.ly/orissgirris" }
     ];
     const container = document.getElementById("winners-list");
     if (!container) return;
