--- a/index.html
+++ b/index.html
@@ -915,9 +915,14 @@ button:hover,
         </div>
       </div>
     </div>
-    <div class="alert-actions">
-      <button class="btn-alert btn-alert-primary">Hemen Oyna</button>
-    </div>
+   <div class="alert-actions">
+  <button
+    class="btn-alert btn-alert-primary"
+    data-url="https://www.joybet669.pro/tr?btag=559047"
+  >
+    Hemen Oyna
+  </button>
+</div>
   </section>
 <script>
   const API_BASE = "https://acikoyun-backend.onrender.com";
