--- a/index.html
+++ b/index.html
@@ -748,6 +748,14 @@ button:hover,
           </table>
         </div>
       </section>
+      <!-- HOT & COLD ARASI GIF -->
+<section class="card strip-gif-card">
+  <a href="https://shoort.in/otobetgiris" target="_blank">
+    <img src="banners/otobet728x90_1.gif"
+         alt="Otobet Banner"
+         class="strip-gif-img" />
+  </a>
+</section>
       <!-- COLD TABLE -->
       <section class="card table-card">
         <div class="table-header">
