--- a/index.html
+++ b/index.html
@@ -687,7 +687,23 @@ button:hover,
     transform: translateX(-50%);
   }
 }
+/* Sıcak / Soğuk arası GIF şeridi */
+.strip-gif-card {
+  padding: 8px 0;
+  display: flex;
+  justify-content: center;
+  background: transparent;
+  border: none;
+  box-shadow: none;
+}
 
+.strip-gif-img {
+  display: block;
+  width: 100%;
+  max-width: 728px;   /* GIF’in gerçek genişliği */
+  height: auto;
+  border-radius: var(--radius-lg);
+}
   </style>
 </head>
 <body>
