--- a/index.html
+++ b/index.html
@@ -726,8 +726,8 @@ button:hover,
     </a>
     <a href="#" class="ad-banner">
       <div>
-        <span class="ad-site">Benebet</span>
-        <span class="ad-text">· Hızlı ödeme, yüksek bonus</span>
+        <span class="ad-site">Otobet</span>
+        <span class="ad-text">· 800 TL Yatırım Şartsız Deneme Bonusu</span>
       </div>
       <span class="ad-cta">Üye Ol</span>
     </a>
@@ -1118,8 +1118,8 @@ orderHot.forEach((id, index) => {
     const winners = [
       { site: "Stake",   user: "***q9", amount: "15.800.000 TL", url: "https://stake.com/?c=aJdZwGlD" },
       { site: "Joybet",     user: "***ak", amount: "4.120.000 TL", url: "https://www.joybet669.pro/affiliates/?btag=559047" },
-      { site: "Benebet", user: "***c7", amount: "3.575.000 TL", url: "https://benebet280.com/register/46233" },
-      { site: "Benebet",     user: "***ve", amount: "2.584.496 TL", url: "https://benebet280.com/register/46233" },
+      { site: "Otobet", user: "***c7", amount: "3.575.000 TL", url: "https://shoort.in/otobetgiris" },
+      { site: "Otobet",     user: "***ve", amount: "2.584.496 TL", url: "https://shoort.in/otobetgiris" },
       { site: "Orisbet",    user: "***k9", amount: "1.058.168 TL", url: "https://cutt.ly/orissgirris" }
     ];
     const container = document.getElementById("winners-list");
@@ -1146,7 +1146,7 @@ orderHot.forEach((id, index) => {
   const adLinks = [
     "https://stake.com/?c=aJdZwGlD",
     "https://www.joybet669.pro/affiliates/?btag=559047",
-    "https://benebet280.com/register/46233"
+    "https://shoort.in/otobetgiris"
   ];
 
   function bindAdBanners() {
@@ -1171,7 +1171,7 @@ function bindFreespinButtons() {
     const btn = document.querySelector("#hot-alert .btn-alert-primary");
     if (!btn) return;
 
-    const url = btn.dataset.url || "https://www.joybet669.pro/tr?btag=559047";
+    const url = btn.dataset.url || "https://shoort.in/otobetgiris";
     btn.addEventListener("click", () => {
       window.open(url, "_blank");
     });
