--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@ button:hover,
       </section>
       <!-- HOT & COLD ARASI GIF -->
 <section class="card strip-gif-card">
-  <a href="https://shoort.in/otobetgiris" target="_blank">
+  <a href="https://cutt.ly/Xtelei33" target="_blank">
     <img src="banners/otobet728x90_1.gif"
          alt="Otobet Banner"
          class="strip-gif-img" />
@@ -848,10 +848,10 @@ button:hover,
     </button>
   </div>
   <div class="freespin-row">
-    <span>Benebet · <span class="game">Yeni Üyelere 250 FS</span></span>
+    <span>Otobet · <span class="game">800 TL Yatırım Şartsız Deneme Bonusu</span></span>
     <button
       class="btn btn-primary small fs-btn"
-      data-url="https://benebet280.com/register/46233"
+      data-url="https://cutt.ly/Xtelei33"
     >
       Hemen Al
     </button>
@@ -943,7 +943,7 @@ button:hover,
    <div class="alert-actions">
   <button
     class="btn-alert btn-alert-primary"
-    data-url="https://www.joybet669.pro/tr?btag=559047"
+    data-url="https://cutt.ly/Xtelei33"
   >
     Hemen Oyna
   </button>
@@ -1118,8 +1118,8 @@ orderHot.forEach((id, index) => {
     const winners = [
       { site: "Stake",   user: "***q9", amount: "15.800.000 TL", url: "https://stake.com/?c=aJdZwGlD" },
       { site: "Joybet",     user: "***ak", amount: "4.120.000 TL", url: "https://www.joybet669.pro/affiliates/?btag=559047" },
-      { site: "Otobet", user: "***c7", amount: "3.575.000 TL", url: "https://shoort.in/otobetgiris" },
-      { site: "Otobet",     user: "***ve", amount: "2.584.496 TL", url: "https://shoort.in/otobetgiris" },
+      { site: "Otobet", user: "***c7", amount: "3.575.000 TL", url: "https://cutt.ly/Xtelei33" },
+      { site: "Otobet",     user: "***ve", amount: "2.584.496 TL", url: "https://cutt.ly/Xtelei33" },
       { site: "Orisbet",    user: "***k9", amount: "1.058.168 TL", url: "https://cutt.ly/orissgirris" }
     ];
     const container = document.getElementById("winners-list");
@@ -1146,7 +1146,7 @@ orderHot.forEach((id, index) => {
   const adLinks = [
     "https://stake.com/?c=aJdZwGlD",
     "https://www.joybet669.pro/affiliates/?btag=559047",
-    "https://shoort.in/otobetgiris"
+    "https://cutt.ly/Xtelei33"
   ];
 
   function bindAdBanners() {
