--- a/index.html
+++ b/index.html
@@ -759,16 +759,21 @@ button:hover,
       </div>
       <span class="ad-cta">Üye Ol</span>
       <!-- HEADER ALTINDAKİ 728x90 LIGOBET BANNER -->
-  <div class="top-strip-wrapper">
+    <!-- TOP ADS -->
+  <div class="ad-strip-wrapper">
+    ...
+  </div>
+
+  <!-- ÜST LIGOBET 728x90 BANNER -->
+  <section class="card strip-top-banner">
     <a href="https://cutt.ly/QtelcFFs" target="_blank" rel="noopener">
       <img
         src="banners/ligobet728x90.gif"
         alt="Ligobet Banner"
-        class="top-strip-img"
+        class="strip-top-img"
       />
     </a>
-    </a>
-  </div>
+  </section>
   <main class="page">
     <section>
       <!-- HOT TABLE -->
