--- a/index.html
+++ b/index.html
@@ -704,33 +704,20 @@ button:hover,
   height: auto;     /* oranı koru */
   border-radius: var(--radius-lg);
 }
-/* Header altındaki 728x90 banner (Ligobet) */
-.top-strip-wrapper {
-  max-width: 1280px;
-  margin: 8px auto 0;
-  padding: 0 18px;             /* TOP ADS ile uyumlu */
+/* Üstteki Ligobet 728x90 banner (card ile aynı hizada) */
+.strip-top-banner {
+  padding: 0;
+  margin-top: 10px;
   display: flex;
   justify-content: center;
 }
 
-.top-strip-img {
+.strip-top-img {
   display: block;
   width: 100%;
-  max-width: 728px;            /* Masaüstünde 728x90 gibi durur */
+  max-width: 728px;
   height: auto;
   border-radius: var(--radius-lg);
-}
-
-/* Mobil optimizasyon */
-@media (max-width: 640px) {
-  .top-strip-wrapper {
-    margin-top: 6px;
-    padding: 0 12px;
-  }
-  .top-strip-img {
-    max-width: 100%;           /* Ekrana göre küçülsün */
-    border-radius: 12px;
-  }
 }
 
   </style>
