--- a/index.html
+++ b/index.html
@@ -712,8 +712,8 @@ button:hover,
   <div class="ad-strip-wrapper">
     <a href="#" class="ad-banner">
       <div>
-        <span class="ad-site">Stake</span>
-        <span class="ad-text">· Sınırsız kazanç, sınırsız çekim</span>
+        <span class="ad-site">Ligobet</span>
+        <span class="ad-text">· 750 TL Nakit Deneme Bonusu</span>
       </div>
       <span class="ad-cta">Üye Ol</span>
     </a>
@@ -830,10 +830,10 @@ button:hover,
         </div>
         <div class="freespin-list">
   <div class="freespin-row">
-    <span>Stake · <span class="game">Günlük Komisyon İadesi</span></span>
+    <span>Ligobet · <span class="game">750 TL Nakit Deneme boNUSU</span></span>
     <button
       class="btn btn-primary small fs-btn"
-      data-url="https://stake.com/?c=aJdZwGlD"
+      data-url="https://cutt.ly/QtelcFFs"
     >
       Hemen Al
     </button>
@@ -1120,7 +1120,7 @@ orderHot.forEach((id, index) => {
       { site: "Joybet",     user: "***ak", amount: "4.120.000 TL", url: "https://www.joybet669.pro/affiliates/?btag=559047" },
       { site: "Otobet", user: "***c7", amount: "3.575.000 TL", url: "https://cutt.ly/Xtelei33" },
       { site: "Otobet",     user: "***ve", amount: "2.584.496 TL", url: "https://cutt.ly/Xtelei33" },
-      { site: "Orisbet",    user: "***k9", amount: "1.058.168 TL", url: "https://cutt.ly/orissgirris" }
+      { site: "Ligobet",    user: "***k9", amount: "1.058.168 TL", url: "https://cutt.ly/QtelcFFs" }
     ];
     const container = document.getElementById("winners-list");
     if (!container) return;
@@ -1144,7 +1144,7 @@ orderHot.forEach((id, index) => {
   }
 
   const adLinks = [
-    "https://stake.com/?c=aJdZwGlD",
+    "https://cutt.ly/QtelcFFs",
     "https://www.joybet669.pro/affiliates/?btag=559047",
     "https://cutt.ly/Xtelei33"
   ];
