--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@ orderHot.forEach((id, index) => {
   function bindPlayButtons() {
     document.querySelectorAll("[data-play-id]").forEach((btn) =>
       btn.addEventListener("click", () => {
-        window.open("https://google.com", "_blank");
+        window.open("https://cutt.ly/QtelcFFs", "_blank");
       })
     );
   }
