--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@ button:hover,
         </div>
         <div class="freespin-list">
   <div class="freespin-row">
-    <span>Ligobet · <span class="game">750 TL Nakit Deneme boNUSU</span></span>
+    <span>Ligobet · <span class="game">750 TL Nakit Deneme Bonusu</span></span>
     <button
       class="btn btn-primary small fs-btn"
       data-url="https://cutt.ly/QtelcFFs"
@@ -839,7 +839,7 @@ button:hover,
     </button>
   </div>
   <div class="freespin-row">
-    <span>Joybet· <span class="game">Gates 250 FS (Yatırım Şartsız)</span></span>
+    <span>Joybet· <span class="game">Yatırım Şartsız 250 Freespin</span></span>
     <button
       class="btn btn-primary small fs-btn"
       data-url="https://www.joybet669.pro/affiliates/?btag=559047"
