--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@ button:hover,
     <a href="#" class="ad-banner">
       <div>
         <span class="ad-site">Joybet</span>
-        <span class="ad-text">· 30 dakikada ödeme garantisi</span>
+        <span class="ad-text">· Yatırım Şartsız 250 Freespin</span>
       </div>
       <span class="ad-cta">Üye Ol</span>
     </a>
