--- a/index.html
+++ b/index.html
@@ -734,6 +734,16 @@ button:hover,
   </div>
   <main class="page">
     <section>
+      <!-- ÜST BÖLÜM 728x90 LIGOBET BANNER -->
+<section class="card strip-gif-card">
+  <a href="https://cutt.ly/QtelcFFs" target="_blank">
+    <img
+      src="banners/ligobet728x90.gif"
+      alt="Ligobet Banner"
+      class="strip-gif-img"
+    />
+  </a>
+</section>
       <!-- HOT TABLE -->
       <section class="card table-card">
         <div class="table-header">
