--- a/index.html
+++ b/index.html
@@ -734,6 +734,16 @@ button:hover,
   </div>
   <main class="page">
     <section>
+      <!-- ÜST BÖLÜM 728x90 XSLOT BANNER -->
+<section class="card strip-gif-card">
+  <a href="https://cutt.ly/NteEarVX" target="_blank">
+    <img
+      src="banners/xslot728x90.gif"
+      alt="XSlot Banner"
+      class="strip-gif-img"
+    />
+  </a>
+</section>
       <!-- ÜST BÖLÜM 728x90 LIGOBET BANNER -->
 <section class="card strip-gif-card">
   <a href="https://cutt.ly/QtelcFFs" target="_blank">
