--- a/index.html
+++ b/index.html
@@ -704,13 +704,6 @@ button:hover,
   height: auto;     /* oranı koru */
   border-radius: var(--radius-lg);
 }
-/* XSLOT bannerını masaüstünde 90px yüksekliğe sabitle */
-.strip-gif-img.xslot-fix {
-  width: 100%;
-  height: 90px;      /* kritik satır */
-  object-fit: cover; /* taşıyorsa kırpar, oran bozulmaz */
-  display: block;
-}
   </style>
 </head>
 <body>
@@ -743,10 +736,10 @@ button:hover,
       <!-- ÜST BÖLÜM 728x90 XSLOT BANNER -->
 <section class="card strip-gif-card">
   <a href="https://cutt.ly/NteEarVX" target="_blank">
-   <img
+ <img
   src="banners/xslot728x90.gif"
   alt="XSlot Banner"
-  class="strip-gif-img xslot-fix"
+  class="strip-gif-img"
 />
   </a>
 </section>
