--- a/index.html
+++ b/index.html
@@ -876,10 +876,10 @@ button:hover,
     </button>
   </div>
   <div class="freespin-row">
-    <span>Orisbet · <span class="game">Her Gün %100 Freespin</span></span>
+    <span>Xslot · <span class="game">1.000 TL Değerinde Freespin</span></span>
     <button
       class="btn btn-primary small fs-btn"
-      data-url="https://cutt.ly/orissgirris"
+      data-url="https://cutt.ly/NteEarVX"
     >
       Hemen Al
     </button>
@@ -1135,7 +1135,7 @@ orderHot.forEach((id, index) => {
 
   function renderWinners() {
     const winners = [
-      { site: "Stake",   user: "***q9", amount: "15.800.000 TL", url: "https://stake.com/?c=aJdZwGlD" },
+      { site: "XSlot",   user: "***q9", amount: "15.800.000 TL", url: "https://cutt.ly/NteEarVX" },
       { site: "Joybet",     user: "***ak", amount: "4.120.000 TL", url: "https://www.joybet669.pro/affiliates/?btag=559047" },
       { site: "Otobet", user: "***c7", amount: "3.575.000 TL", url: "https://cutt.ly/Xtelei33" },
       { site: "Otobet",     user: "***ve", amount: "2.584.496 TL", url: "https://cutt.ly/Xtelei33" },
