--- a/index.html
+++ b/index.html
@@ -718,8 +718,8 @@ button:hover,
     </a>
     <a href="#" class="ad-banner">
       <div>
-        <span class="ad-site">Joybet</span>
-        <span class="ad-text">· Yatırım Şartsız 250 Freespin</span>
+        <span class="ad-site">Xslot</span>
+        <span class="ad-text">· 1.000 TL Değerinde Freespin</span>
       </div>
       <span class="ad-cta">Üye Ol</span>
     </a>
@@ -1164,7 +1164,7 @@ orderHot.forEach((id, index) => {
 
   const adLinks = [
     "https://cutt.ly/QtelcFFs",
-    "https://www.joybet669.pro/affiliates/?btag=559047",
+    "https://cutt.ly/NteEarVX",
     "https://cutt.ly/Xtelei33"
   ];
 
