--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@ orderHot.forEach((id, index) => {
 
   function renderWinners() {
     const winners = [
-      { site: "XSlot",   user: "***q9", amount: "15.800.000 TL", url: "https://cutt.ly/NteEarVX" },
+      { site: "Xslot",   user: "***q9", amount: "15.800.000 TL", url: "https://cutt.ly/NteEarVX" },
       { site: "Joybet",     user: "***ak", amount: "4.120.000 TL", url: "https://www.joybet669.pro/affiliates/?btag=559047" },
       { site: "Otobet", user: "***c7", amount: "3.575.000 TL", url: "https://cutt.ly/Xtelei33" },
       { site: "Otobet",     user: "***ve", amount: "2.584.496 TL", url: "https://cutt.ly/Xtelei33" },
